<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EnterCodeManuallyFragment">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.EnterCodeManually">

        <TextView
            android:id="@+id/descriptionText_ecm"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="199dp"
            android:text="@string/description_text"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/enterSoftTokenEditText"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/descriptionText_ecm"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="26dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_soft_token"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_EditText_ecm"
            tools:targetApi="o" />

        <Button
            android:id="@+id/okayBtn_ecm"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="36dp"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/errorSoftTokenTextView"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_alignStart="@+id/descriptionText_ecm"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="167dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="167dp"
            android:text="@string/wrong_token"
            android:textSize="16dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterSoftTokenEditText" />

        <EditText
            android:id="@+id/description_EditText_ecm"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/descriptionText_ecm"
            android:layout_alignParentTop="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="23dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/description_here"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionText_ecm"
            tools:targetApi="o" />


    </android.support.constraint.ConstraintLayout>

</FrameLayout>