<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AuthorizationFragment">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.Authorization">


        <ImageView
            android:id="@+id/fingerprintImage"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="170dp"
            android:layout_marginTop="65dp"
            android:contentDescription="@string/status_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />


        <TextView
            android:id="@+id/paraLabel"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_alignStart="@+id/authByPinCode"
            android:layout_alignParentBottom="true"
            android:text="@string/place_your_finger_on_the_scanner_to_proceed"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/authByPinCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="123dp"
            android:layout_marginTop="132dp"
            android:text="@string/auth_with_pin_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fingerprintImage" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>