<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/decryptLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DecryptedMessageFragment">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DecryptedMessage">

        <TextView
            android:id="@+id/descriptionText_dm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="211dp"
            android:text="@string/description_text"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/okayBtn_dm"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="36dp"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/oneTimePassTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/okayBtn_dm"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="44dp"
            android:text="@string/one_time_pass"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_EditText_dm" />

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/oneTimePassTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="28dp"
            android:layout_marginTop="44dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/oneTimePassTextView"
            app:layout_constraintTop_toBottomOf="@+id/description_EditText_dm" />

        <EditText
            android:id="@+id/description_EditText_dm"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/descriptionText_dm"
            android:layout_alignParentTop="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="23dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/description_here"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionText_dm"
            tools:targetApi="o" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>