<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/callLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AcceptByCallFragment">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AcceptByCall">

        <TextView
            android:id="@+id/callAgainTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="159dp"
            android:layout_marginTop="168dp"
            android:layout_marginEnd="159dp"
            android:text="@string/call_me_again"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CallingTextView" />

        <TextView
            android:id="@+id/CallingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/callAgainTextView"
            android:layout_alignParentTop="true"
            android:layout_marginStart="112dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="112dp"
            android:text="@string/calling"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneImageView" />

        <ImageView
            android:id="@+id/phoneImageView"
            android:layout_width="220dp"
            android:layout_height="212dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="88dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/phone_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/phone_image" />

        <TextView
            android:id="@+id/dot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="276dp"
            android:text="@string/dot_text"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/CallingTextView" />

        <TextView
            android:id="@+id/dot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="276dp"
            android:text="@string/dot_text"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dot1" />

        <TextView
            android:id="@+id/dot3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="112dp"
            android:layout_marginBottom="276dp"
            android:text="@string/dot_text"
            android:textSize="40sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/dot2" />


    </android.support.constraint.ConstraintLayout>

</FrameLayout>